--- a/index.css
+++ b/index.css
@@ -310,13 +310,18 @@ button {
 
 
 }
-.contact{
-    width: 100%;
-    height: 100%;
-    background: #d0ded2;
+.contact {
+    background-color: rgba(255, 255, 255, 0); /* Transparent background */
+    border: 1px solid #ccc; /* Light grey border */
+    border-radius: 10px; /* Border radius */
+    padding: 20px;
+  }
+  
+  .contact h5 {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Shadow effect */
+  }
+  
 
-
-}
 .contact-content li{
     font-size: 12px;
     margin-bottom: 1.1rem;
