--- a/index.css
+++ b/index.css
@@ -67,7 +67,22 @@ body {
     border: 1px solid #ebccd1;
     color: #a94442;
   }  
+/* ----drop down ---- */
+/* Position the dropdown content relative to the user button */
+.dropdown-content {
+    position: absolute;
+    top: 40px; /* Adjust as needed */
+    right: 0;
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
 
+/* ----root settings */
 *{
     background-color: azure;
     margin: 0;
