--- a/index.css
+++ b/index.css
@@ -1,72 +1,77 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-  #loginForm, #signupForm {
-    width: 300px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
-  }
-  
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-  }
-  
-  input[type="submit"] {
-    background-color: #4caf50;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  
-  .alert {
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-  }
-  
-  .alert-success {
-    background-color: #dff0d8;
-    border: 1px solid #d6e9c6;
-    color: #3c763d;
-  }
-  
-  .alert-danger {
-    background-color: #f2dede;
-    border: 1px solid #ebccd1;
-    color: #a94442;
-  }  
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+.container {
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+h1 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+label {
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.forgot-password {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.alert-success {
+  background-color: #dff0d8;
+  border: 1px solid #d6e9c6;
+  color: #3c763d;
+}
+
+.alert-danger {
+  background-color: #f2dede;
+  border: 1px solid #ebccd1;
+  color: #a94442;
+}  
+
+
 /* ----drop down ---- */
 /* Position the dropdown content relative to the user button */
 .dropdown-content {
@@ -417,12 +422,6 @@ button {
     size: 100px;
   }
 
-<<<<<<< HEAD
-  /* ============features page================================ */
-  
- 
-=======
-  /* --------explore section------ */
 .content{
     display: grid;
     grid-template-columns: 50% auto;
@@ -478,7 +477,7 @@ button {
     border-radius: 20px;
     margin-left: 100px;
 }
-<<<<<<< HEAD
+
 
 .content-right{
   display: block;
@@ -502,6 +501,46 @@ button {
     transform: rotate(360deg);
   }
 }
-=======
->>>>>>> 19fb65aa28740b58e131ad26572d26c66f204df8
->>>>>>> 2566e9f91196f2322536e07b92581b07452792da
+
+
+
+.paymentOptionsContainer{
+  background-color: #82f084;
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+  height:25vh;
+
+}
+.paymentOption{
+  background-color: #fff; 
+  margin:10px;
+  width:40%;
+  height:80%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6%;
+
+
+}
+.paymentOption:hover{
+  background-color: rgba(46, 54, 51, 0.151);
+  transition: all .65s ease;
+  color: rgb(170, 93, 93);
+}
+.fa-brands.fa-paypal{
+  font-size: 450%;
+}
+.fa-brands.fa-cc-visa{
+ font-size: 450%;
+
+}
+.fa-solid.fa-mobile{
+  font-size: 450%;
+}
+a {
+  text-decoration: none;
+  color:inherit;
+}
