--- a/index.css
+++ b/index.css
@@ -402,7 +402,7 @@ button {
   .content{
     display: grid;
     grid-template-columns: 50% auto;
-    gap: 30px;
+    gap: 5%;
     align-items: center;
     justify-content: space-between;
     width: 100%;
@@ -411,7 +411,9 @@ button {
     
   }
   .content-left{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     background: none;
 
@@ -443,6 +445,7 @@ button {
   
   .explore{
     padding: 10px 23px;
+    width:25%;
     background-color: #ff511c;
     color: #ffffff;
     border: none;
