--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ body {
     padding: 0;
 }
 
-.contain{
+.container {
     max-width: 800px;
     margin: 50px auto;
     background-color: #fff;
@@ -417,7 +417,6 @@ button {
     size: 100px;
   }
 
-
   /* --------explore section------ */
 .content{
     display: grid;
@@ -500,4 +499,40 @@ button {
 }
 
 
+/* -----payment.html section */
 
+/* index.css */
+
+.boy {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5; /* Similar to PayPal.com background color */
+}
+
+.featuresContainer {
+  text-align: center;
+}
+
+.paymentOptionsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px; /* Adjust the gap between payment options */
+}
+
+.paymentOption {
+  width: 100px; /* Adjust the width of each payment option */
+}
+
+.paymentOption a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.paymentOption p {
+  margin: 0;
+}
