--- a/index.css
+++ b/index.css
@@ -513,31 +513,104 @@ button {
   background-color: #f5f5f5; /* Similar to PayPal.com background color */
 }
 
-.featuresContainer {
-  text-align: center;
-}
+*{
+  text-decoration: none;
 
-.paymentOptionsContainer {
+}
+.featuresContainer.menu{
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  height:7vh;
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap:0;
+  
+
+}
+.paymentOptionsMenuItem{
+  height:100%;
+
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 20px; /* Adjust the gap between payment options */
+  align-items: flex-end;
+  
 }
+.paymentOptionsMenuItem:hover {
+  transition: all .65s ease;
 
-.paymentOption {
-  width: 100px; /* Adjust the width of each payment option */
-}
 
-.paymentOption a {
-  text-decoration: none;
-  color: inherit;
-}
+  background-color: white;
+  border-right:0.5px Solid black;
+  border-bottom: 0.2px Solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 8, 0.603); /* Box shadow with a slight blur */
 
-.paymentOption p {
-  margin: 0;
 }
 
 
+.orderMenuItem{
+  height:100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  
+}
+.orderMenuItem:hover{
+  transition: all .65s ease;
 
+  background-color: white;
+  border-left:0.5px Solid black;
+  border-bottom:0.2px Solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 8, 0.603); /* Box shadow with a slight blur */
+
+}
+
+
+/* ====================================payment options section=============================== */
+#paymentOptionsContainer{
+    background-color: #bff5c0;
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+    height:25vh;
+    width:100vw;
+    margin-top:11%;
+
+}
+.paymentOption{
+    background-color: #fff; 
+    margin:10px;
+    width:40%;
+    height:80%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6%;
+
+
+  }
+.paymentOption:hover{
+    background-color: rgba(46, 54, 51, 0.151);
+    transition: all .65s ease;
+    color:white;
+}
+  .fa-brands.fa-paypal{
+    font-size: 450%;
+  }
+  .fa-brands.fa-cc-visa{
+   font-size: 450%;
+
+  }
+  .fa-solid.fa-mobile{
+    font-size: 450%;
+  }
+  
+/* ==========================orders section======================================== */
+
+ #ordersContainer {
+    margin-top: 5%;
+ }
 /* -------search bar----------- */
 
