--- a/index.css
+++ b/index.css
@@ -503,35 +503,26 @@ button {
 
 /* index.css */
 
-.boy {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5; /* Similar to PayPal.com background color */
-}
+
 
 *{
   text-decoration: none;
 
 }
 .featuresContainer.menu{
+  background-color: rgb(248, 241, 212);
   position:absolute;
   top:0;
   left:0;
   right:0;
-  height:7vh;
   display:grid;
   grid-template-columns: 1fr 1fr;
-  gap:0;
-  
+  grid-gap: 0;
+  height: 7vh;
 
 }
 .paymentOptionsMenuItem{
   height:100%;
-
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -567,6 +558,63 @@ button {
 }
 
 
+/* ====================================payment options section=============================== */
+#paymentOptionsContainer{
+    background-color: #bff5c0;
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+    height:25vh;
+    margin-top:11%;
 
+}
+.paymentOption{
+    background-color: #fff; 
+    margin:10px;
+    width:40%;
+    height:80%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6%;
+
+
+  }
+.paymentOption:hover{
+    background-color: rgba(46, 54, 51, 0.151);
+    transition: all .65s ease;
+    color: rgb(170, 93, 93);
+}
+  .fa-brands.fa-paypal{
+    font-size: 450%;
+  }
+  .fa-brands.fa-cc-visa{
+   font-size: 450%;
+
+  }
+  .fa-solid.fa-mobile{
+    font-size: 450%;
+  }
+  
+/* ==========================orders section======================================== */
+
+ #ordersContainer {
+    margin-top: 15%;
+    display:flex;
+    flex-direction: column;
+    
+ }
+ .currentOrders{
+  display:flex;
+  justify-content: space-around;
+  border: solid 1px ;
+ }
+
+ .pastOrders{
+  display:flex;
+  justify-content: space-around;
+  border: solid 1px ;
+ }
 /* -------search bar----------- */
 
