--- a/product.css
+++ b/product.css
@@ -62,6 +62,7 @@ header .icon-cart{
 
 .listProduct{
     display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
