--- a/index.css
+++ b/index.css
@@ -747,3 +747,52 @@ margin-bottom: 30px;
   z-index: 1;
 
 }
+
+.team .team_box{
+  width: 95%;
+  height: auto;
+  margin: 0 auto;
+  bottom: 55px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1rf 1rf 1rf 1rf;
+  grid-gap: 0;
+
+}
+
+.team .team_box .team_card{
+  width: 350px;
+  height: 410px;
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  margin: 0 auto;
+  z-index: 5;
+  box-shadow: 1px 2px 10px rgba(0,0,0,0.2);
+}
+
+.team .team_box .team_card .team_img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team .team_box .team_card .team_img img{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  box-shadow: 0 0 8px rgba(0,0,0,0.3);
+}
+
+.team .team_box .team_card .team_tag h2{
+  margin: 10px 0;
+}
+
+.team .team_box .team_card .team_tag p.info{
+  text-align: center;
+  line-height: 23px;
+  margin-top: 10px;
+}
