--- a/index.css
+++ b/index.css
@@ -333,6 +333,99 @@ button {
   }
 
 
+/* ----Order Section ---*/
+/*Oder*/
+
+.oder{
+  width: 100%;
+  height: 100vh;
+  padding: 5px 0;
+}
+
+.oder h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 45px;
+}
+
+.oder h1 span{
+  color: #facc22;
+  margin-right: 10px;
+}
+
+.oder .oder_main{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  top: 15px;
+}
+
+.oder .oder_main .oder_img img{
+  width: 650px;
+}
+
+.oder .oder_main .oder_form{
+  width: 50%;
+  height: 620px;
+  background: #faf3ce;
+  padding: 15px 20px 0 20px;
+  border-radius: 10px;
+}
+
+.oder .oder_main .oder_form h2{
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 30px;
+}
+
+.oder .oder_main .oder_form .oder_list{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0 20px;
+  margin-bottom: 30px;
+}
+
+.oder .oder_main .oder_form .oder_list p{
+  margin-bottom: 5px;
+}
+
+.oder .oder_main .oder_form .oder_list input{
+  width: 350px;
+  border: 2px solid #facc22;
+  border-radius: 5px;
+  outline: none;
+  background: none;
+  color: #000;
+  padding: 10px 5px;
+  margin-bottom: 15px;
+}
+
+.oder .oder_main .oder_form .oder_list textarea{
+  width: 350px;
+  height: 200px;
+  border: 2px solid #facc22;
+  border-radius: 5px;
+  outline: none;
+  background: none;
+  color: #000;
+  padding: 10px 5px;
+}
+
+.oder .oder_main .oder_form .oder_btn{
+  padding: 10px 20px;
+  border: 2px solid #facc22;
+  text-decoration: none;
+  color: #fff;
+  background: #facc22;
+}
+
+.oder .oder_main .oder_form .oder_btn i{
+  margin-right: 8px;
+}
+
+
 /* -----about section------ */
 .main-contact{
     display: flex;
