--- a/index.css
+++ b/index.css
@@ -825,6 +825,7 @@ margin-bottom: 30px;
 .blog{
   background-color: white;
   border:black solid 1px ;
+  position:relative;
   border-radius: 3%;
   display:flex;
   flex-direction: column;
@@ -838,8 +839,13 @@ margin-bottom: 30px;
   
 }
 .blog .like_or_visit {
-  border:grey solid 1px;
+  border-top:grey solid 1px;
+  
   background-color: white;
+  position:absolute;
+  bottom: 0;
+  left:0;
+  right:0;
   display:flex;
   justify-content:right;
   gap:2%;
