--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -333,99 +332,6 @@ button {
   }
 
 
-/* ----Order Section ---*/
-/*Oder*/
-
-.oder{
-  width: 100%;
-  height: 100vh;
-  padding: 5px 0;
-}
-
-.oder h1{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 45px;
-}
-
-.oder h1 span{
-  color: #facc22;
-  margin-right: 10px;
-}
-
-.oder .oder_main{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
-  top: 15px;
-}
-
-.oder .oder_main .oder_img img{
-  width: 650px;
-}
-
-.oder .oder_main .oder_form{
-  width: 50%;
-  height: 620px;
-  background: #faf3ce;
-  padding: 15px 20px 0 20px;
-  border-radius: 10px;
-}
-
-.oder .oder_main .oder_form h2{
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 30px;
-}
-
-.oder .oder_main .oder_form .oder_list{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 0 20px;
-  margin-bottom: 30px;
-}
-
-.oder .oder_main .oder_form .oder_list p{
-  margin-bottom: 5px;
-}
-
-.oder .oder_main .oder_form .oder_list input{
-  width: 350px;
-  border: 2px solid #facc22;
-  border-radius: 5px;
-  outline: none;
-  background: none;
-  color: #000;
-  padding: 10px 5px;
-  margin-bottom: 15px;
-}
-
-.oder .oder_main .oder_form .oder_list textarea{
-  width: 350px;
-  height: 200px;
-  border: 2px solid #facc22;
-  border-radius: 5px;
-  outline: none;
-  background: none;
-  color: #000;
-  padding: 10px 5px;
-}
-
-.oder .oder_main .oder_form .oder_btn{
-  padding: 10px 20px;
-  border: 2px solid #facc22;
-  text-decoration: none;
-  color: #fff;
-  background: #facc22;
-}
-
-.oder .oder_main .oder_form .oder_btn i{
-  margin-right: 8px;
-}
-
-
 /* -----about section------ */
 .main-contact{
     display: flex;
@@ -606,41 +512,6 @@ button {
     transform: rotate(360deg);
   }
 }
-<<<<<<< HEAD
-=======
-/*.........delivery information section.......*/
-/* Style table header */
-th, td {
-  border: 1px solid #ddd;
-  padding: 10px;
-  text-align: left;
-}
-
-th {
-  background-color: #f2f2f2;
-}
-
-/* Highlight alternate rows for better readability */
-tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-/* Style the first column, e.g., for item names */
-td:first-child {
-  font-weight: bold;
-}
-
-/* Apply some padding to the last column */
-td:last-child {
-  padding-right: 20px;
-}
-
-/* Add some hover effect on rows */
-tr:hover {
-  background-color: #e6f7ff;
->>>>>>> 19fb65aa28740b58e131ad26572d26c66f204df8
->>>>>>> 2566e9f91196f2322536e07b92581b07452792da
-=======
 
 
 /* -----payment.html section */
@@ -772,22 +643,34 @@ tr:hover {
 
 }
 
+.sub-tittle{
+  color: blue;
+  background-color: rgb(179, 213, 207);
+  text-decoration: none;
+  border-radius: 20px;
+}
+
 .services-list{
   display: flex;
   justify-content: space-between;
-  grid-gap:50px ;
+  grid-gap:30px ;
   margin-top: 50px;
+  background-color: #fff;
+  
+  
 
 }
 
 
-.services-list div {
-  background: #262626;
+.services-list div{
+  
   padding: 40px;
   font-size: 13p ;
   font-weight: 300;
   border-radius: 20px;
   transition:background 0.5s,transform 0.5s ;
+  background-color: #eff9f9;
+  width: 60vh;
   
 
 }
@@ -804,6 +687,7 @@ margin-bottom: 30px;
   background: #aecbb7;
   border-radius: 20px;
   align-items: center;
+ 
 
 
 
@@ -811,7 +695,7 @@ margin-bottom: 30px;
 .services-list div p{
   border-radius: 20px;
   text-align: center;
-  background-color: #888;
+  background-color: #fff;
 }
 
 .services-list div a{
@@ -827,7 +711,7 @@ margin-bottom: 30px;
 
 
 .services-list div:hover{
-  background-image: url(/imag/);
+  background-image: url(/imag/banner.jpg);
   transform: translateY(-10px);
 }
 
@@ -841,6 +725,7 @@ margin-bottom: 30px;
   width: 100%;
   height: 77vh;
   padding: 10px 0;
+  margin-bottom: 40vh;
 
 }
 .team h1{
@@ -882,7 +767,7 @@ margin-bottom: 30px;
   margin: 0 auto;
   bottom: 55px;
   position: relative;
-  display: grid;
+  display: flex;
   grid-template-columns: 1rf 1rf 1rf 1rf;
   grid-gap: 0;
 
@@ -926,60 +811,166 @@ margin-bottom: 30px;
 }
 
 
+/Offer/
 
-/* ====================================OUR BLOG============================================ */
-
-.blog_container{
-  border:black solid 2px;
-  display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap:1%;
-  background-color: white;
-  border-radius: 1.5%;
-
-}
-@media screen and (max-width:768px){
-  .blog_container{
-    display:flex;
-    flex-direction: column;
-  }
-  .blog img{
-    width:45%;
-    height:45%;
-
-  }
-  
-}
-.blog{
-  background-color: white;
-  border:black solid 1px ;
-  position:relative;
-  border-radius: 3%;
-  display:flex;
-  flex-direction: column;
-  margin:1%;
-
+.offer{
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
 }
 
-.blog img {
-  width:100%;
-  border-radius: 3%;
-  
+.offer .offer_box{
+  width: 95%;
+  display: ;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0 15px;
+  margin: 0 auto;
 }
-.blog .like_or_visit {
-  border-top:grey solid 1px;
-  
-  background-color: white;
-  position:absolute;
-  bottom: 0;
-  left:0;
-  right:0;
-  display:flex;
-  justify-content:right;
-  gap:2%;
-  
+
+.offer .offer_box .offer_card_1{
+  width: 720px;
+  height: 470px;
 }
-.blog .like_or_visit .fa-regular.fa-heart{
-  margin-right: 3%;
+
+.offer .offer_box .offer_card_1 .offer_img{
+  width: 720px;
+  height: 470px;
 }
->>>>>>> f47a5def023d5a704027490162afacc5317fb92e
+
+.offer .offer_box .offer_card_1 .offer_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag{
+  position: relative;
+  bottom: 400px;
+  color: #fff;
+  padding: 0 35px;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.5); /* Adjust the opacity here */
+
+}
+
+.offer .offer_box .offer_card_1 .offer_tag h2{
+  font-size: 45px;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag h1{
+  font-family: QuillScript;
+  font-size: 60px;
+  color: #facc22;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag p{
+  margin-top: 30px;
+  width: 200px;
+  text-align: justify;
+  line-height: 22px;
+  color: black;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag .offer_btn{
+  color: #fff;
+  border: 2px solid #facc22;
+  padding: 10px 20px;
+  text-decoration: none;
+  position: relative;
+  top: 30px;
+  z-index: 2;
+  transition: 0.3s;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag .offer_btn::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #facc22;
+  width: 0;
+  height: 100%;
+  transition: 0.3s;
+  z-index: -1;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag .offer_btn:hover::before{
+  width: 100%;
+}
+
+.offer .offer_box .offer_card_1 .offer_tag .offer_btn i{
+  margin-right: 8px;
+}
+
+.offer .offer_box .offer_card_2{
+  width: 720px;
+  height: 470px;
+}
+
+.offer .offer_box .offer_card_2 .offer_img{
+  width: 720px;
+  height: 470px;
+}
+
+.offer .offer_box .offer_card_2 .offer_img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag{
+  position: relative;
+  bottom: 400px;
+  color: #fff;
+  padding: 0 35px;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag h2{
+  font-size: 45px;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag h1{
+  font-family: QuillScript;
+  font-size: 60px;
+  color: #facc22;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag p{
+  margin-top: 30px;
+  width: 200px;
+  text-align: justify;
+  line-height: 22px;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag .offer_btn{
+  color: #fff;
+  border: 2px solid #facc22;
+  padding: 10px 20px;
+  text-decoration: none;
+  position: relative;
+  top: 30px;
+  z-index: 2;
+  transition: 0.3s;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag .offer_btn::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #facc22;
+  width: 0;
+  height: 100%;
+  transition: 0.3s;
+  z-index: -1;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag .offer_btn:hover::before{
+  width: 100%;
+}
+
+.offer .offer_box .offer_card_2 .offer_tag .offer_btn i{
+  margin-right: 8px;
+}
